--- a/Result.html
+++ b/Result.html
@@ -139,8 +139,7 @@
         <strong>Top Compatibility Matches:</strong><br>
         1. ${match1}<br>
         2. ${match2}<br>
-        <strong>${wildcard}</strong>
-      `;
+        3. ${wildcard}<br>
     }
 
     // Sugar Daddy’s Invite
@@ -153,8 +152,8 @@
       q4 === "yes" || q4 === "little" ||
       q6 === "flaunt" || q6 === "partner shine"
     ) {
-      inviteText.innerHTML = `🎬 You’re invited to audition for our reality dating show!<br>
-      Participate in the speed dating game <strong>The Pickup Line</strong> to audition.<br>Once you’re in, you won’t want to pull out.`;
+      inviteText.innerHTML = `🎬 You’re invited to audition for our <br> reality dating show!<br>
+      Participate in the speed dating game: <br> <strong>The Pickup Line</strong> to audition.<br>Once you’re in, you won’t want to pull out.`;
     }
   </script>
 </body>
