--- a/Result.html
+++ b/Result.html
@@ -159,7 +159,7 @@
     ) {
       inviteText.innerHTML = `
         🎬 You’re invited to audition for our <br>reality dating show!<br>
-        Participate in the speed dating game:<br><strong>The Pickup Line</strong> to audition.<br>
+        To audition, participate in the speed dating game:<br><strong>The Pickup Line</strong> <br>
         Once you’re in, you won’t want to pull out.
       `;
     }
